--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wjson",
+  "name": "@darkflare/wjson",
   "version": "0.1.1",
   "description": "Configure Wrangler in the format of your choice.",
   "bin": {
