--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "esbuild": "^0.14.48"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.5",
     "@types/minimist": "^1.2.2",
     "@types/node": "^18.0.3",
     "@typescript-eslint/eslint-plugin": "^5.30.5",
@@ -48,6 +49,7 @@
     "eslint": "^8.19.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "js-yaml": "^4.1.0",
     "minimist": "^1.2.6",
     "rimraf": "^3.0.2",
     "typescript": "^4.7.4"
