ci: update repo owner in release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   release:
-    if: ${{ github.repository_owner == 'azurydev' }}
+    if: ${{ github.repository_owner == 'darkflarengine' }}
     name: Release
     runs-on: ubuntu-latest
     steps:
