--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "js-yaml": "^4.1.0",
     "minimist": "^1.2.6",
     "rimraf": "^3.0.2",
+    "strip-json-comments": "^5.0.0",
     "typescript": "^4.7.4"
   },
   "engines": {
