--- a/package.json
+++ b/package.json
@@ -2,54 +2,37 @@
   "name": "@darkflare/wjson",
   "version": "0.4.3",
   "description": "Configure Wrangler in the format of your choice.",
+  "author": "Samuel Kopp <opensource@azury.dev> (https://azury.dev)",
   "bin": {
     "wjson": "./dist/bin.js"
   },
-  "types": "types/index.d.ts",
-  "main": "dist/index.js",
   "exports": "./dist/index.js",
+  "types": "types/index.d.ts",
   "scripts": {
+    "lint": "eslint src",
+    "format": "eslint src --fix",
     "build:cli": "esbuild src/bin/index.ts --bundle --minify --format=cjs --legal-comments=none --platform=node --external:esbuild --outfile=dist/bin.js",
     "build:api": "esbuild src/index.ts --bundle --minify --format=cjs --legal-comments=none --platform=node --external:esbuild --outfile=dist/index.js",
     "build": "rimraf dist && rimraf types && tsc && npm run build:cli && npm run build:api",
-    "lint": "eslint src --ext .ts",
-    "format": "eslint src --fix",
     "test": "npm run build:cli && cd test && node ../dist/bin.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/darkflarengine/wjson.git"
-  },
-  "keywords": [
-    "wrangler.json",
-    "wjson",
-    "cloudflare",
-    "workers",
-    "wrangler",
-    "darkflare",
-    "darkflarengine"
-  ],
-  "author": "Samuel Kopp <opensource@azury.dev> (https://azury.dev)",
   "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/darkflarengine/wjson/issues"
-  },
+  "repository": "darkflarengine/wjson",
+  "bugs": "https://github.com/darkflarengine/wjson/issues",
   "homepage": "https://github.com/darkflarengine/wjson#readme",
   "dependencies": {
     "esbuild": "^0.14.51"
   },
   "devDependencies": {
+    "@azury/eslint-config": "^1.0.2",
+    "@azury/style": "^1.0.0",
     "@changesets/changelog-github": "^0.4.6",
     "@changesets/cli": "^2.24.1",
     "@types/js-yaml": "^4.0.5",
     "@types/minimist": "^1.2.2",
     "@types/node": "^18.6.3",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
     "chalk": "^5.0.1",
     "eslint": "^8.21.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-unused-imports": "^2.0.0",
     "js-yaml": "^4.1.0",
     "minimist": "^1.2.6",
     "rimraf": "^3.0.2",
