--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "bin": {
     "wjson": "./dist/bin.js"
   },
+  "main": "dist/index.js",
   "exports": "./dist/index.js",
   "types": "types/index.d.ts",
   "scripts": {
@@ -13,7 +14,7 @@
     "format": "eslint src --fix",
     "build:cli": "esbuild src/bin/index.ts --bundle --minify --format=cjs --legal-comments=none --platform=node --external:esbuild --outfile=dist/bin.js",
     "build:api": "esbuild src/index.ts --bundle --minify --format=cjs --legal-comments=none --platform=node --external:esbuild --outfile=dist/index.js",
-    "build": "rimraf dist && rimraf types && tsc && npm run build:cli && npm run build:api",
+    "build": "empty dist types && tsc && npm run build:cli && npm run build:api",
     "test": "npm run build:cli && cd test && node ../dist/bin.js"
   },
   "license": "Apache-2.0",
@@ -31,11 +32,11 @@
     "@types/js-yaml": "^4.0.5",
     "@types/minimist": "^1.2.2",
     "@types/node": "^18.6.3",
+    "@unvented/empty": "^1.0.2",
     "chalk": "^5.0.1",
     "eslint": "^8.21.0",
     "js-yaml": "^4.1.0",
     "minimist": "^1.2.6",
-    "rimraf": "^3.0.2",
     "strip-json-comments": "^5.0.0",
     "typescript": "^4.7.4"
   },
